[package]
name = "raytracing"
version = "0.1.0"
authors = ["Ben Villalobos <4691428+BenVillalobos@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath="0.18.0"
winapi="0.2.*"
user32-sys="0.2.*"
kernel32-sys="0.2.*"